MongoDB Data Persistence

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,7 @@ ports:
   - port: 1050
 tasks:
   - command: cp -r .jupyter /home/gitpod/
-  - command: mongod
+  - command: mkdir -p /workspace/data && mongod --dbpath /workspace/data
   - command: pip3 install -r requirements.txt && (python3 data_acquire.py & python3 app.py)
 vscode:
   extensions:
