--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,7 +8,7 @@ ports:
 tasks:
   - command: cp -r .jupyter /home/gitpod/
   - command: mkdir -p /workspace/data && mongod --dbpath /workspace/data
-  - command: pip3 install -r requirements.txt && (python3 load_data.py & python3 data_acquire.py & python3 app.py)
+  - command: pip3 install -r requirements.txt && python3 load_data.py && (python3 data_acquire.py & python3 app.py)
 vscode:
   extensions:
     - ms-python.python@2019.9.34911:NHtRMp5fFB2KUUw72DlGug==
